--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 html,
 body {
   height: 100%;
+  width: 100%;
   padding: 0px;
   margin: 0px;
   background-color: whitesmoke;
@@ -13,4 +14,5 @@ body {
 body {
   display: flex;
   flex-direction: row;
+  box-sizing: border-box;
 }
