Update UI, fix bugs

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,11 +4,11 @@
 
 html,
 body {
+  position: fixed;
   height: 100%;
   width: 100%;
   padding: 0px;
   margin: 0px;
-  background-color: whitesmoke;
 }
 
 body {
