--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     --background: 0 0% 95%;
-    --foreground: 240 10% 3.9%;
+    --foreground: 0 0% 10%;
     --sidebar: 0 0% 90%;
     --messageform: 0 0% 100%;
     --card: 0 0% 100%;
@@ -34,10 +34,10 @@
   }
 
   .dark {
-    --background: 0 0% 13.73%;
-    --foreground: 0 0% 98%;
-    --sidebar: 0 0% 8.63%;
-    --messageform: 0 0% 18.43%;
+    --background: 0 0% 20%;
+    --foreground: 0 0% 85%;
+    --sidebar: 0 0% 15%;
+    --messageform: 0 0% 25%;
     --card: 240 10% 3.9%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 10.73%;
@@ -68,7 +68,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground text-xl md:text-lg;
   }
 }
 
